@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-27T16:11:43Z",
+  "timestamp" : "2023-09-28T00:41:13Z",
   "count_outdated" : 1004,
   "uniques_outdated" : 636,
-  "count" : 1029,
+  "count" : 1030,
   "uniques" : 654,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
